--- a/index.html
+++ b/index.html
@@ -5,3 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2024 Projects | janellyyyace</title>
 </head>
+
+<body>
+    <header>
+    <h1 align="center">Hi 👋, I'm Janel!</h1>
+    <p> An Interactive Design - Major in Graphic Design </strong> student at the <a href="https://sait.ca" target="_blank">Southern Alberta Institute of Technology</a></p>
+    </header>
+</body>
+
