Add about me section

--- a/index.html
+++ b/index.html
@@ -11,5 +11,30 @@
     <h1 align="center">Hi 👋, I'm Janel!</h1>
     <p> An Interactive Design - Major in Graphic Design </strong> student at the <a href="https://sait.ca" target="_blank">Southern Alberta Institute of Technology</a></p>
     </header>
+
+    <main>
+        <section>
+            <h3>ABOUT ME</h3>
+            <p>😄 <strong>Pronouns:</strong> she/her/hers</p>
+            <p>🔭 I’m currently working on making <a href="https://andiesanade.itch.io/merchants-and-monsters" target="_blank">games</a> with my partner <a href="https://x.com/AndieSanade" target="_blank">@AndieSanade</a>
+            </p>
+            <p>⚡ <strong>Fun Fact:</strong> I like playing tabletop role-playing games like:</p>
+                 <ul>
+                    <li>Dungeons and Dragons - <em>5th Edition</em></li>
+                    <li>You Awaken in a Strange Place</li>
+                    <li><a href="https://andiesanade.itch.io/danger-death-detectives" target="_blank">Danger Death Detectives!</a></li>
+                    <li>Monster of the Week</li>
+                    <li><a href="https://andiesanade.itch.io/impulse-and-control" target="_blank">Impulse & Control</a></li>
+                    <li>Candela Obscura</li>
+                    <li>Kids on Brooms</li>
+                    <li>Kids on Bikes</li>
+                    <li>Savage Worlds</li>
+                    <li>Delta Green</li>
+                    <li>Vaesen</li>
+                 </ul>
+          </section>
+    </main>   
 </body>
+
+
 
