Create projects page, add navigation between home page and projects page

--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 <body>
     <header>
     <h1 align="center">Hi 👋, I'm Janel!</h1>
-    <p> An Interactive Design - Major in Graphic Design </strong> student at the <a href="https://sait.ca" target="_blank">Southern Alberta Institute of Technology</a></p>
+    <h2> An Interactive Design - Major in Graphic Design </strong> student at the <a href="https://sait.ca" target="_blank">Southern Alberta Institute of Technology</a></h2>
     </header>
 
     <main>
+        <!-- about me section -->
         <section>
             <h3>ABOUT ME</h3>
             <p>😄 <strong>Pronouns:</strong> she/her/hers</p>
             <p>🔭 I’m currently working on making <a href="https://andiesanade.itch.io/merchants-and-monsters" target="_blank">games</a> with my partner <a href="https://x.com/AndieSanade" target="_blank">@AndieSanade</a>
             </p>
-            <p>⚡ <strong>Fun Fact:</strong> I like playing tabletop role-playing games like:</p>
-                 <ul>
+            <p>⚡ <strong>Fun Fact:</strong> I like playing tabletop role-playing games! I've been playing TTRPGs for almost 5 years now. Here's a list of games that I've played:</p>
+                 <!-- unordered list -->
+                <ul>
                     <li>Dungeons and Dragons - <em>5th Edition</em></li>
                     <li>You Awaken in a Strange Place</li>
                     <li><a href="https://andiesanade.itch.io/danger-death-detectives" target="_blank">Danger Death Detectives!</a></li>
@@ -33,8 +35,14 @@
                     <li>Vaesen</li>
                  </ul>
           </section>
+
+        <section>
+            <!-- projects section, redirects to project page -->
+            <h3>PROJECTS</h3>
+            <p>I've been a freelance graphic designer since 2022. <a href="./projects/index.html">Check out some of the things I've worked on!</a></p>
+          </section>
     </main>   
 </body>
-
+</html>
 
 
