Add software section with table

--- a/index.html
+++ b/index.html
@@ -36,11 +36,34 @@
                  </ul>
           </section>
 
+                  <!-- software section -->
+                  <section>
+                    <h3>TOOLS</h3>
+                        <table>
+                            <tr>
+                                <th>Photo Editing</th>
+                                <th>Video Editing</th>
+                                <th>Layout</th>
+                            </tr>
+                            <tr>
+                                <td>Adobe Photoshop</td>
+                                <td>Adobe Premiere Pro</td>
+                                <td>Canva</td>
+                            </tr>
+                            <tr>
+                                <td>Adobe Lightroom</td>
+                                <td>DaVinci Resolve Studio</td>
+                                <td>Adobe Illustrator</td>
+                            </tr>
+                        </table>
+                  </section>
+                  
         <section>
             <!-- projects section, redirects to project page -->
             <h3>PROJECTS</h3>
             <p>I've been a freelance graphic designer since 2022. <a href="./projects/index.html">Check out some of the things I've worked on!</a></p>
           </section>
+
     </main>   
 </body>
 </html>
