update alt text

--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
 </ol>
 
 <figure>
-    <img src="../images/Labworks Diagnostic Center Brochure Page 1.png" height="3300" width="2550" alt="a large tiger lying on some grass with its front legs crossed">
+    <img src="../images/Labworks Diagnostic Center Brochure Page 1.png" height="3300" width="2550" alt="brochure with services offered">
     <figcaption>📸 Brochure made by @janellyyyace</a></figcaption>
 </figure>
 
