link css sheet to html files, fix projects header

--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2024 Projects | janellyyyace</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
     <header>
     <h1 align="center">Hi 👋, I'm Janel!</h1>
     <h2> An Interactive Design - Major in Graphic Design </strong> student at the <a href="https://sait.ca" target="_blank">Southern Alberta Institute of Technology</a></h2>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="./projects/index.html">Projects</a></li>
+            <li><a href="./contact/index.html">Contact</a></li>
+        </ul>
+    </nav>
     </header>
-
     <main>
         <!-- about me section -->
         <section>
@@ -45,12 +52,12 @@
                                 <th>Video Editing</th>
                                 <th>Layout</th>
                             </tr>
-                            <tr>
+                            <tr align="center">
                                 <td>Adobe Photoshop</td>
                                 <td>Adobe Premiere Pro</td>
                                 <td>Canva</td>
                             </tr>
-                            <tr>
+                            <tr align="center">
                                 <td>Adobe Lightroom</td>
                                 <td>DaVinci Resolve Studio</td>
                                 <td>Adobe Illustrator</td>
@@ -63,7 +70,9 @@
             <h3>PROJECTS</h3>
             <p>I've been a freelance graphic designer since 2022. <a href="./projects/index.html">Check out some of the things I've worked on!</a></p>
           </section>
-
+          <footer>
+            <p>Follow me on all social media @janellyyyace!</p>
+          </footer>
     </main>   
 </body>
 </html>
