--- a/projects/index.html
+++ b/projects/index.html
@@ -1,15 +1,36 @@
-<h1 align="center">PROJECTS</h1>
-<p>I have been helping build the following brands since 2022:</p>
-<ol>
-    <li><h4>Labworks Diagnostic Center</h4></li>
-    <p>Labworks Diagnostic Center is a diagnostic laboratory that opened on July 8, 2023 at the heart of Koronadal City.</p>
-    <li><h4>Koronadal Eye Care Center</h4></li>
-    <p>Koronadal Eye Care Center is a clinic that opened on March 8, 2024 at the heart of Koronadal City. Koronadal Eye Care Center is a partnership between <strong>Calixton Optical, Labworks Diagnostic Center, and K & A Optical Laboratory</strong> to further cater to the needs of their patients.</p>
-</ol>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects | janellyyyace</title>
+    <link rel="stylesheet" href="../css/main.css">
+</head>
 
-<figure>
-    <img src="../images/Labworks Diagnostic Center Brochure Page 1.png" height="3300" width="2550" alt="brochure with services offered">
-    <figcaption>📸 Brochure made by @janellyyyace</a></figcaption>
-</figure>
+<body>
 
-<p><a href="/">Return home.</a></p>
+    <header>
+        <h1 align="center">PROJECTS</h1>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="../projects/index.html">Projects</a></li>
+                <li><a href="../contact/index.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <p>I have been helping build the following brands since 2022:</p>
+            <ol>
+                <li><h4>Labworks Diagnostic Center</h4></li>
+                    <p>Labworks Diagnostic Center is a diagnostic laboratory that opened on July 8, 2023 at the heart of Koronadal City.</p>
+                <li><h4>Koronadal Eye Care Center</h4></li>
+                    <p>Koronadal Eye Care Center is a clinic that opened on March 8, 2024 at the heart of Koronadal City. Koronadal Eye Care Center is a partnership between <strong>Calixton Optical, Labworks Diagnostic Center, and K & A Optical Laboratory</strong> to further cater to the needs of their patients.</p>
+            </ol>
+        <figure>
+            <img src="../images/Labworks Diagnostic Center Brochure Page 1.png" height="3300" width="2550" alt="brochure with services offered">
+            <figcaption>📸 Brochure made by @janellyyyace</a></figcaption>
+        </figure>
+    </main>
+</body>
