css redo, create dice roller with js, create about page, move info from home page to about page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects | janellyyyace</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
 
+
     <header>
-        <h1 align="center">PROJECTS</h1>
-        <nav>
+
+    <h1 align="center">janellyyyace</h1>
+
+        <!-- navigation -->
+        <nav class = "navbar">
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="../projects/index.html">Projects</a></li>
-                <li><a href="../contact/index.html">Contact</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="../pages/about.html">About</a></li>
+                <li><a href="../pages/projects.html">Projects</a></li>
+                <li><a href="../pages/contact.html">Contact</a></li>
             </ul>
         </nav>
+
     </header>
 
     <main>
