--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,5 +35,13 @@
                     <p>@janellyyyace</p>
                 </h4></li>
             </ol>
+        
+        <!-- footer -->
+        <footer>
+            <div id="copyright">Hello!</div>
+            </footer>
+    
+            <script src="../js/interact.js">
+                </script>
     </main>
 </body>
